syntax = "proto3";

option csharp_namespace = "GrpcProtos";

package GrpcProtos;

import "google/protobuf/wrappers.proto";
import "google/protobuf/empty.proto";
import "google/protobuf/struct.proto";
import "common.proto";
import "floors.proto";

service Room {
	rpc CreateRoom (CreateRoomRequest) returns (RoomDTO);
	rpc GetRoom (GetRequest) returns (NullableRoomDTO);
	rpc GetAllRooms (google.protobuf.Empty) returns (Rooms);
	rpc UpdateRoom(RoomDTO) returns (google.protobuf.Empty);
	rpc DeleteRoom(DeleteRequest) returns (google.protobuf.Empty);
}

message	RoomDTO{
	string id = 1;
	int32 number = 2;
	bool isProduction = 3;
	string Description = 4;
	FloorDTO floor = 5;
	string floorId = 6;
}

message Rooms{
	repeated RoomDTO items = 1;
}

message NullableRoomDTO{
	oneof kind{
		google.protobuf.NullValue null = 1;
		RoomDTO room = 2;
	}
}

message CreateRoomRequest{
	string id = 1;
	int32 number = 2;
	bool isProduction = 3;
	string Description = 4;
	FloorDTO floor = 5;
}
